fix navbar alignment

--- a/frontend/css/global.scss
+++ b/frontend/css/global.scss
@@ -157,8 +157,8 @@ fieldset {
   i {
     display: block;
     position: absolute;
-    top: 2px;
-    left: 2px;
+    top: 2.5px;
+    left: 2.5px;
     color: $white;
     font-size: 11px;
     &.fa-times {
